# vid.grep

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  LOG.md  PROJECT_PLAN.md  README.md  TODO.md  decorators.py  extract_knowledge.py  llm.py  llm_config.json  pipeline.sh  prompts.json  pyproject.toml  transcribe.py  transcribe.sh  transcribe_profile.prof
config/: llm_config.json
scripts/: pipeline.sh
tests/: integration_test.py
vidgrep/: knowledge.py  llm.py  transcribe.py
yt-summarizer/: README.md  manifest.json  package.json  popup.html
yt-summarizer/src/: background.ts  popup.tsx
